--- a/css/movie_styles.css
+++ b/css/movie_styles.css
@@ -1,3 +1,43 @@
+#container {
+    min-height: 500px;
+    width: 900px;
+    margin: 0 auto;
+}
+
+#thumbnail-box{
+    display: block;
+    height: 225px;
+    width: 150px;
+    border: 0px dotted #1c1c1c;
+    float: left;
+    padding: 10px 10px 10px 0px;
+}
+
+#thumbnail-box img{
+    position: absolute;
+    height:225px;
+    width:150px;
+    border-radius:3px;
+}
+
+#movie_description {
+    padding: 5px 0px 10px 0px;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
+    width: 740;
+    height: auto;
+    float: right;
+}
+
+
+ h4 {
+    font-size: 1.2em;
+ }
+
+.rated {
+    color: red;
+}
+
 table a:link {
     color: #666;
     font-weight: bold;
@@ -17,12 +57,17 @@ table a:hover {
 }
 
 table {
-    font-family: Arial, Helvetica, sans-serif;
+
+    margin-top: 20px;
+
+    width: 900px;
+
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
     color: #666;
     font-size: 12px;
     text-shadow: 1px 1px 0px #fff;
     background: #eaebec;
-    margin: 0;
     border: #ccc 1px solid;
 
     -moz-border-radius: 3px;
