--- a/css/input.css
+++ b/css/input.css
@@ -62,6 +62,21 @@ textarea {
     cursor: pointer;
 }
 
+.search_btn {
+    border: 1px solid #D8D8D8;
+    padding: 5px 15px 5px 15px;
+    color: #8D8D8D;
+    text-shadow: 1px 1px 1px #FFF;
+    border-radius: 3px;
+    background: #F8F8F8;
+}
+
+.search_btn:hover {
+    background: #ECECEC;
+    cursor: pointer;
+}
+
+
 .success {
     background: #CFFFF5;
     padding: 10px;
