--- a/css/input.css
+++ b/css/input.css
@@ -3,7 +3,8 @@
     padding: 20px;
     border: 1px solid #DDD;
     border-radius: 5px;
-    font-family: Arial;
+    /*font-family: Arial;*/
+    font-family:Verdana;
     font-size: 11px;
     font-weight: bold;
     color: #666666;
@@ -35,7 +36,9 @@ input {
     padding-left: 4px;
     color: #666;
     width: 180px;
-    font-family: Arial, Helvetica, sans-serif;
+    /*font-family: Arial, Helvetica, sans-serif;*/
+    font-family:Verdana;
+    font-weight: normal!important;
 }
 
 textarea {
@@ -45,8 +48,9 @@ textarea {
     color: #666;
     height: 100px;
     width: 180px;
-    font-family: Arial, Helvetica, sans-serif;
-}
+    /*font-family: Arial, Helvetica, sans-serif;*/
+    font-family:Verdana;
+    font-weight: normal!important;}
 
 .submit_btn {
     border: 1px solid #D8D8D8;
