--- a/css/style.css
+++ b/css/style.css
@@ -378,7 +378,7 @@ ul#genre-list li	{
 }
 
 #footer p {
-  background: #E1A304;
+  background: #36a2d2;
   padding: 4px 0;
   text-align: center;
   display: block;
