--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,7 @@ a {
 	margin-left:auto;
 	margin-right:auto;
 	min-height:100%;
+    height: 100%;
     height: auto !important;
     padding-top: 100px;
     margin-bottom: -226px;
