--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,13 @@ a {
     padding-top: 100px;
     margin-bottom: -226px;
 }
+#pagination_wrapper {
+    display: block;
+    width: 500px;
+    height: auto;
+    margin: 0 auto;
+    font-family: Verdana;
+}
 
 #push {
     height: 226px;
@@ -164,7 +171,7 @@ a {
 	left:7px;
 	position:relative;
 	font-family: Verdana;
-	font-size: 12.5px;
+	font-size: 12px;
 	text-decoration: none;
 	list-style:none;
 	top:20px;
@@ -250,7 +257,7 @@ a {
 	position:relative;
 	top:60px;
 	font-family: Arial;
-	font-size: 11.5px;
+	font-size: 11px;
 	text-decoration:none;
 	float:left;
 	list-style:none;
@@ -495,4 +502,107 @@ ul#genre-list li	{
   width: 600px;
   margin-bottom: 10px;
   margin-top: 20px;
+}
+
+.pagination {
+    margin: 0 auto;
+    padding: 20px;
+    margin-bottom: 20px;
+    font: 14px/24px sans-serif;
+    text-align: center;
+}
+
+.page {
+    display: inline-block;
+    padding: 0px 9px;
+    margin-right: 4px;
+    border-radius: 3px;
+    border: solid 1px #c0c0c0;
+    background: #e9e9e9;
+    box-shadow: inset 0px 1px 0px rgba(255,255,255, .8), 0px 1px 3px rgba(0,0,0, .1);
+    font-size: .875em;
+    font-weight: bold;
+    text-decoration: none;
+    color: #717171;
+    text-shadow: 0px 1px 0px rgba(255,255,255, 1);
+}
+
+.page:hover, .page.gradient:hover {
+    background: #fefefe;
+    background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#FEFEFE), to(#f0f0f0));
+    background: -moz-linear-gradient(0% 0% 270deg,#FEFEFE, #f0f0f0);
+}
+
+.page.active {
+    border: none;
+    background: #616161;
+    box-shadow: inset 0px 0px 8px rgba(0,0,0, .5), 0px 1px 0px rgba(255,255,255, .8);
+    color: #f0f0f0;
+    text-shadow: 0px 0px 3px rgba(0,0,0, .5);
+}
+
+.page.gradient {
+    background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#f8f8f8), to(#e9e9e9));
+    background: -moz-linear-gradient(0% 0% 270deg,#f8f8f8, #e9e9e9);
+}
+
+#thumbnail-list {
+}
+
+#thumbnail-list ul {
+    list-style-type: none;
+    width: 500px;
+}
+
+#thumbnail-list h3 a {
+    font: normal 15px/1.5 Helvetica, Verdana, sans-serif;
+    color: #000000;
+}
+
+#thumbnail-list li a {
+    font: normal 15px/1.5 Helvetica, Verdana, sans-serif;
+    color: #000000;
+}
+
+#thumbnail-list li img {
+    float: left;
+    margin: 0 15px 0 0;
+    width: 65px;
+    height: 95px;
+}
+
+#thumbnail-list li p {
+    font: 200 12px/1.5 Georgia, Times New Roman, serif;
+}
+
+#thumbnail-list li {
+    padding: 10px;
+    overflow: auto;
+}
+
+#thumbnail-list li:hover {
+    background: #eee;
+    cursor: pointer;
+}
+
+#pagination-title {
+    display: block;
+    width: 500px;
+    height: 50px;
+}
+
+#pagination-title h1 {
+    text-decoration:none;
+    display: block;
+    padding: 5px !important;
+    margin: -5px 0 !important;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    -ms-border-radius: 2px;
+    -o-border-radius: 2px;
+    border-radius: 2px;
+    transition: all 0.3s ease-out;
+    background: #36a2d2;
+    overflow: hidden;
+    color: white !important;
 }
